--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "outDir": "./app"
   },
   "filesGlob": [
-    "./dev/**/*.ts",
+    "./client/**/*.ts",
     "!./node_modules/**/*.ts"
   ],
   "exclude": [
@@ -23,9 +23,9 @@
     "rewriteTsconfig": true
   },
   "files": [
-    "./dev/app.component.ts",
-    "./dev/books/books.component.ts",
-    "./dev/main.ts",
-    "./dev/vehicles.component.ts"
+    "./client/app.component.ts",
+    "./client/books/books.component.ts",
+    "./client/main.ts",
+    "./client/vehicles.component.ts"
   ]
 }
